Fix Team presentation spacing

--- a/web/sites/sema-design/themes/cleverdrop/src/styles/03_components/_TeamPresentation.scss
+++ b/web/sites/sema-design/themes/cleverdrop/src/styles/03_components/_TeamPresentation.scss
@@ -30,6 +30,7 @@
     transform: translateY(-100%) rotateX(0) rotate(27deg);
     width: rem(300px);
     position: absolute;
+    top: auto;
     bottom: calc(-100% + rem(40px));
     left: rem(-100px);
     opacity: .7;
@@ -55,7 +56,7 @@
 
 .TeamPresentation--inner {
   @include enable-grid;
-  row-gap: rem(60px);
+  row-gap: rem(15px);
   position: relative;
 }
 
@@ -94,6 +95,7 @@
   @include make-cols(4);
   z-index: 1;
   margin-bottom: 0;
+  margin-top: rem(40px);
 
   @include media-breakpoint-up('md') {
     @include make-cols(9, 2);
